# digit-recognizer

./: .gitignore  CMakeLists.txt  README.md
data/: prepare.sh
doc/: Componentes principales.ipynb  Correr knn desde python.ipynb  Digitos manuscritos.ipynb  Exp 1.ipynb  Exp 3.ipynb  Experimento 2.ipynb  Heatmap Alpha K.ipynb  Imagenes MNIST.ipynb  MatrizConfusion.ipynb  Probando el predict.ipynb  Usando scikit-learn.ipynb  exp1_acc_scores.npy  exp1_f1_scores.npy  exp1_k1-10_alpha10.npy  exp1_k1-10_alpha100.npy  exp1_k1-10_alpha2.npy  exp1_k1-10_alpha20.npy  exp1_k1-10_alpha200.npy  exp1_k1-10_alpha30.npy  exp1_k1-10_alpha50.npy  exp1_k1-10_nopca.npy  exp1_k3_size.npy  exp1_k5-1000_alpha2.npy  exp1_k5-1000_nopca.npy  exp1_times_.npy  exp2_k10_alpha10.npy  exp2_k3_alpha36.npy  exp2_k3_alpha40.npy  exp2_k3_alpha40_K10.npy  exp3_k1.npy  exp3_k100.npy  exp3_k_depending_size.npy  exp3_k{}_{}.npy  exp4_variate_KFold_k3_alpha37_cv_100.npy  exp4_variate_KFold_k3_alpha37_cv_200.npy  exp4_variate_KFold_k3_alpha37_cv_5.npy
py/: exp.py  exp2.py  knn_classifier.py
src/: common.h  knn.h  main.cpp  matrix.h  pca.h  vector_ext.h
test/: integration.cpp  main.cpp  matrix_tests.h  pca_tests.h
